<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">Horoscope</string>
    <string name="aries" tools:ignore="MissingTranslation">Aries</string>
    <string name="taurus" tools:ignore="MissingTranslation">Taurus</string>
    <string name="gemini" tools:ignore="MissingTranslation">Gemini</string>
    <string name="cancer" tools:ignore="MissingTranslation">Cancer</string>
    <string name="leo" tools:ignore="MissingTranslation">Leo</string>
    <string name="virgo" tools:ignore="MissingTranslation">Virgo</string>
    <string name="libra" tools:ignore="MissingTranslation">Libra</string>
    <string name="scorpio" tools:ignore="MissingTranslation">Scorpio</string>
    <string name="sagittarius" tools:ignore="MissingTranslation">Sagittarius</string>
    <string name="capricorn" tools:ignore="MissingTranslation">Capricorn</string>
    <string name="aquarius" tools:ignore="MissingTranslation">Aquarius</string>
    <string name="pisces" tools:ignore="MissingTranslation">Pisces</string>
    <string name="text" tools:ignore="MissingTranslation">PERSONALITY\n\nAquarius is the 11th sign of the zodiac and represents inventiveness and brilliance. The ruling planets are Uranus and Saturn, which gives this sign a unique blend of a restricted yet liberated personality. Saturn is associated with limits and boundaries while Uranus is associated with rebellion and unpredictability. Their symbol is the water bearer, representative of the genius mindset that Aquarius people like to pour out and share with others.","The Sun in this sign gives the personality a prideful and idealistic yet realistic approach to life and their ideas. They may come across as detached or uninterested because they are often focusing their mental energy on fixing the world’s problems. Aquarius is intuitive about the future and can spot trends before they take off, symbolized in their gemstone turquoise, which bestows the gift of prophecy.\n\nThe fixed mood makes them tenacious and determined, and when combined with the air element it makes this sign very smart, technologically savvy, and always right. With the Uranus energy motivating them to rebel, they get enjoyment out of living their lives outside the boundaries of what is expected of them. Aquarians have a tendency to do exactly the opposite of what they were brought up to do. An underlying ‘fight’ between the Saturnian discipline of what one ‘has’ to do is pitted against the wild Uranus energy of what one wants to do and is seen in their life choices.\n\n\nWORK\n\nAquarius is often associated with being unconventional and socially aware because of their Uranian planetary influence which allows them to bring the future to the now. This energy combined with Saturn’s need to structure society allows them to appreciate unity, social improvement programs, and people helping people. This leads Aquarians into fields that are related to social systems, social work, journalism, social justice, and reform.\n\nAquarius is extremely smart and perceptive, their colors are silver and light-blue, which show a clear mind, bright intellect, and inventive approach to life. This highly intelligent nature allows them to do well in fields with a high degree of abstract thinking; such as computer science, astrophysics, mathematics, music, engineering, systems analyst, app development, programming, technical writing, and even astrology. This sign is able to see very easily how different branches of information fit and weave together in algorithmic formations.\n\nIn addition, to their technical and left-brain skills, Aquarians are also massively creative. They have a witty, humorous, and even whimsical nature which can be seen in their clever designs and drawings, much like the other air signs. When the Sun is in Aquarius it indicates the person has yang or outward way of expressing their energy. This sign can be considered odd and eccentric by social standards, but they can’t be bothered to worry about such things. Aquarians are dedicated to experiencing and working in environments they feel strongly about.\n\n\nLOVE\n\nLike most other areas of life, when it comes to love Aquarius takes a unique approach. Just like the free-flowing energy of Uranus, they desire originality, freedom, and unconventionality in their partnerships. At times, Aquarians can become critical, demanding, and temperamental towards partners because of the Saturn-Uranus dichotomy ruling their sign. It is hard for them to lose an argument as they prefer to get the last word in.\n\nTheir very intensive, focused minds, due to their fixed nature and air element, means they will bring a compelling energy to the relationship. Aquarians are not shy to explore their sexual boundaries and typically will invite experiences that others might find taboo. They are progressive, open, and unapologetic of their sexual preferences.\n\nDue to their fixed disposition and rebellious spirit, Aquarius may be slow to commit to a steady relationship. They need physical as well as a mental connection with their prospective partner. Most of their relationships start out as friendships which gives them plenty of time to get to know someone before getting too serious. They are also passionate lovers; they give their all once the energy is reciprocated. They are often in the relationship for the long haul.</string>
    <string name="menu_item1_txt" tools:ignore="MissingTranslation">Chat Reading</string>
    <string name="menu_item_21_txt" tools:ignore="MissingTranslation">Personalized horoscope</string>
    <string name="menu_item_22_txt" tools:ignore="MissingTranslation">My love compatibility</string>
    <string name="menu_item_24_txt" tools:ignore="MissingTranslation">My astrological profile</string>
    <string name="chsign_p2_txt" tools:ignore="MissingTranslation">Define a zodiac sign</string>
    <string name="chsign_p1_cta" tools:ignore="MissingTranslation">ENTER</string>
    <string name="chsign_p1_txt" tools:ignore="MissingTranslation">Pick your zodiac sign</string>
    <string name="chsign_p1_btn" tools:ignore="MissingTranslation">"I don't know my/their sign"</string>
    <string name="compatam_p1_sign1" tools:ignore="MissingTranslation">ME</string>
    <string name="compatam_p1_sign2" tools:ignore="MissingTranslation">HIM/HER</string>
    <string name="compatam_p1_btn" tools:ignore="MissingTranslation">"I don't know their sign"</string>
    <string name="compatam_p1_cta" tools:ignore="MissingTranslation">I want to know!</string>
    <string name="compatam_p4_btn" tools:ignore="MissingTranslation">START AGAIN</string>
    <string name="a_doubt_a_question" tools:ignore="MissingTranslation">A doubt, a question?</string>
    <string name="do_you_really_want_to_exit" tools:ignore="MissingTranslation">Do you really want to exit ???</string>
    <string name="reading_tarot">The Tarot is a symbolic map of consciousness that encompasses our journey through life, both spiritually and practically. Tarot reading is the practice of divining wisdom and guidance through a specific spread of Tarot cards. The cards are meant to provide insight into the innermost truths of your higher self. In other words, the cards provide an evolved awareness of what you already know deep within.</string>
    <string name="your_questions">Do not keep those confusing thoughts to yourself. Our best psychics are waiting to answer all your questions.</string>

</resources>