<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:cropToPadding="false"
            android:scaleType="centerCrop"
            android:src="@drawable/background_v2"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <RelativeLayout
            android:layout_marginTop="@dimen/_24sdp"
            android:id="@+id/compat_choice_top_bar"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/height_size_bar"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/compat_choice_back_2"
                android:layout_width="@dimen/size_back"
                android:layout_height="@dimen/size_back"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/_10sdp"
                android:adjustViewBounds="true"
                android:src="@drawable/back_white" />


            <ImageView

                android:id="@+id/compat_choice_back"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="match_parent"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/menu_item_22_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/size_text_top" />
        </RelativeLayout>

        <TextView
            android:id="@+id/compat_choice_title1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="Are You"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compat_choice_top_bar" />

        <TextView
            android:id="@+id/compat_choice_title2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/compat_choice_title1"
            android:gravity="center_horizontal"
            android:text="Made for each other"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toTopOf="@+id/compat_choice_signs"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compat_choice_title1" />

        <LinearLayout
            android:id="@+id/compat_choice_signs"
            android:layout_width="0dp"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/compat_choice_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/compat_choice_top_bar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/compat_choice_left_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/compat_choice_left_title"
                        android:layout_margin="10.0dip">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/compat_choice_left_viewpager"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_120sdp"
                            android:layout_centerInParent="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/compat_choice_left_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/compatam_p1_sign1"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="18.0sp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/compat_choice_right_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/compat_choice_right_title"
                        android:layout_margin="10.0dip">

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/compat_choice_right_viewpager"
                            android:layout_width="0dp"
                            android:layout_height="@dimen/_120sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/compat_choice_right_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/compatam_p1_sign2"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="18.0sp" />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/compat_choice_btn"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_below="@+id/compat_choice_signs"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_button_blue"
            app:layout_constraintBottom_toTopOf="@+id/compat_choice_go_wims"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/compat_choice_btn_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/compatam_p1_cta"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textSize="21.0sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/compat_choice_go_wims"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_below="@+id/compat_choice_btn"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:padding="8.0dip"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/compat_choice_go_wims_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compatam_p1_btn"
                android:textColor="@android:color/white"
                android:textSize="16.0sp" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/compat_choice_go_wims_2"
                android:layout_alignBottom="@+id/compat_choice_go_wims_2"
                android:layout_marginLeft="2.0dip"
                android:layout_toRightOf="@+id/compat_choice_go_wims_2">

                <ImageView
                    android:layout_width="9.0dip"
                    android:layout_height="9.0dip"
                    android:layout_gravity="center"
                    android:layout_marginTop="1.0dip"
                    android:adjustViewBounds="true"
                    android:src="@drawable/chevron" />
            </FrameLayout>
        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>